--- a/vignettes/intro-to-gmvarkit.Rmd
+++ b/vignettes/intro-to-gmvarkit.Rmd
@@ -248,17 +248,18 @@ which simultaneously diagonalizes $\Omega_1,...,\Omega_M$, and $\Omega_{u,t}$ fo
 ## Identification of the structural shocks
 Even if all pairs of $\lambda_{mi}$ are distinct for some $m$, unique identification of $B_t$ requires deciding upon the ordering of $\lambda_{mi}$ in the diagonals of $\Lambda_m$ which fixes also the ordering of the columns of $W$. With an arbitrary ordering of the eigenvalues and eigenvectors, it is not guaranteed that the structural shocks have economic interpretations. However, after the statistical identification, overidentifying restrictions that lead economically interpretable structural shocks can be tested and thus validated statistically. Furthermore, it turns out that globally unique identification of the structural shocks can often be achieved with less restrictive constraints than in conventional SVAR models. The following proposition gives sufficient and necessary conditions for global identification of the shocks when all pairs of $\lambda_{mi}$ are distinct for some $m$.
 
-\begin{proposition}\label{prop:ident1}
+#### Proposition 1
 Suppose $\Omega_1=WW'$ and $\Omega_m=W\Lambda_mW', \ \ m=2,...,M,$ where $\Lambda_m=\text{diag}(\lambda_{m1},...,\lambda_{md})$, $\lambda_{mi}>0$ ($i=1,...,d$), contains the eigenvalues of $\Omega_m\Omega_1^{-1}$ in the diagonal and the columns of the nonsingular $W$ are the related eigenvectors. Then, the last $d_1$ structural shocks are uniquely identified if 
-\begin{enumerate}[label={(\arabic*)}]
-\item for all $j\geq d_1$ and $i\neq j$ there exists an $m\in \lbrace 2,...,M \rbrace$ such that $\lambda_{mi} \neq \lambda_{mj}$,
-\item the columns of $W$ are constrained in a way that for all $i\neq j\geq d_1$ changing the order of the $i$th and $j$th column would violate the constraints as is and after changing all signs in the $i$th column, and
-\item there is at least one (strict) sign constraint in each of the last $d_1$ columns of $W$.
-\end{enumerate}
-\end{proposition}
+
+1. for all $j\geq d_1$ and $i\neq j$ there exists an $m\in \lbrace 2,...,M \rbrace$ such that $\lambda_{mi} \neq \lambda_{mj}$,
+
+2. the columns of $W$ are constrained in a way that for all $i\neq j\geq d_1$ changing the order of the $i$th and $j$th column would violate the constraints as is and after changing all signs in the $i$th column, and
+
+3. there is at least one (strict) sign constraint in each of the last $d_1$ columns of $W$.
+
 \noindent Notice that changing all signs in a column of $W$ merely switches the sign of the corresponding shock and condition (3) of Proposition \ref{prop:ident1} can therefore be always satisfied without loss of generality. The assumption that the identified shocks are the last $d_1$ shocks is neither restrictive as one may always reordering the variables accordingly. 
 
-For example, if $d=3$, $\lambda_{m1}\neq\lambda_{m3}$ or some $m$, and $\lambda_{m2}\neq\lambda_{m3}$ or some $m$, the third structural shock can be identified with the following constraints:
+For example, if $d=3$, $\lambda_{m1}\neq\lambda_{m3}$ for some $m$, and $\lambda_{m2}\neq\lambda_{m3}$ for some $m$, the third structural shock can be identified with the following constraints:
 \begin{equation}\label{eq:exampleconstraints}
 B_t=\begin{bmatrix}
 * & * & *    \\
@@ -283,17 +284,16 @@ and so on, where $"*"$ signifies that the element is not constrained, $"+"$ deno
 Shocks that don't satisfy the condition (1) of Proposition \ref{prop:ident1} can still be identified but it requires stronger conditions. The following proposition provides sufficient criteria for global identification of the shocks when exactly one of the eigenvalues $\lambda_{mi},\ i\neq j \geq d_1$ is identical to $\lambda_{mj}$ in all $m$.
 
 #### Proposition 2
-Consider the matrix decomposition of Proposition \ref{prop:ident1} and further suppose that $\lambda_{mi}=\lambda_{mj}$ for some $i\neq j  \geq d_1$ and all $m$, but for all $l\centernot\in\lbrace i,j \rbrace$, $\lambda_{ml}\neq\lambda_{mj}$ for some $m$. Then, %the decomposition of $\Omega_1,...,\Omega_M$ is globally unique if in addition to conditions (2) and (3) of Proposition \ref{prop:ident1}, the following condition is satisfied:
-the last $d_1$ structural shocks are uniquely identified if conditions (1)-(3) of Proposition \ref{prop:ident1} are otherwise satisfied, and in addition
-\begin{enumerate}[label={(\arabic*)}]
-\setcounter{enumi}{3}
-\item the column $i\neq j$ of $W$ such that $\lambda_{mi}=\lambda_{mj}$ for all $m$ has a zero constraint where the $j$th column has a (strict) sign constraint and also the $j$th column has a zero constraint where the $i$th column has a (strict) sign constraint. 
-\end{enumerate}
-\end{proposition}
+Consider the matrix decomposition of Proposition \ref{prop:ident1} and further suppose that $\lambda_{mi}=\lambda_{mj}$ for some $i\neq j  \geq d_1$ and all $m$, but for all $l$ that are not included in $\lbrace i,j \rbrace$, $\lambda_{ml}\neq\lambda_{mj}$ for some $m$. Then, the last $d_1$ structural shocks are uniquely identified if conditions (1)-(3) of Proposition \ref{prop:ident1} are otherwise satisfied, and in addition
+
+4. the column $i\neq j$ of $W$ such that $\lambda_{mi}=\lambda_{mj}$ for all $m$ has at least one (strict) sign constraint and the $j$th column has a zero constraint where the $i$th column has the (strict) sign constraint. 
+
 \noindent Note that identification of several shocks with Proposition \ref{prop:ident2} allows for multiple pairs of identical eigenvalues $\lambda_{mi}$ but no more than two of them can be identical in all $m$.
 
+__Note: condition (4) of Proposition 2 is more relaxed here than in the cited arXiv paper Virolainen (2020, version 2). This more relaxed condition will be updated to the paper in later versions.__
+
 To exemplify, if $d=4$, $\lambda_{m1}=\lambda_{m2}$ for all $m$, $\lambda_{m2}\neq\lambda_{m3}$ for some $m$, $\lambda_{m2}\neq\lambda_{m4}$ for some $m$, and $\lambda_{m3}\neq\lambda_{m4}$ for some $m$, the following constraints lead to global identification of all the shocks:
-\begin{equation}\label{eq:exampleconstraints}
+$$
 B_t=\begin{bmatrix}
 * & * & * & *\\
 * & * & * & *\\
@@ -314,17 +314,18 @@ B_t=\begin{bmatrix}
 0 & - & + & -\\
 * & * & * & *\\
 \end{bmatrix}
-\end{equation} 
-and so on. %, where $"*"$ signifies that the element is not constrained, $"+"$ denotes strict positive and $"-"$ a strict negative sign constraint, and $"0"$ means that the element is constrained to zero.
-As is demonstrated above, the structural shocks can often be identified with less restrictive constraints than in a conventional SVAR model even when some of the eigenvalues are identical for all covariance matrices.
+$$
+and so on. 
 
-The conditions of Proposition \ref{prop:ident2} are not in general necessary. If $d=2$ and $\lambda_{m1}=\lambda_{m2}$ for all $m$, for instance, identification (of all shocks) with Cholesky decomposition leads to unique solution with less restrictive constraints than the ones required in Proposition \ref{prop:ident2}. More generally, if all the eigenvalues are the same for all covariance matrices, then $\Omega_m=\lambda_{m1}\Omega_1$ and the necessary identification condition is the same as for the conventional SVAR model \citep[which is given, for example, in][Section 9.1.2 for the B-model]{Lutkepohl:2005}. If more than two eigenvalues are identical for all $m=2,...,M$ but they are not all identical, it may still be possible to find less restrictive (or more suitable) conditions for identification of the shocks. Specifically, the idea utilized in the proof of Proposition \ref{prop:ident2} (presented in an Appendix) generalizes to larger numbers of identical eigenvalues, but the sufficient conditions become increasingly more complicated and are not presented for brevity. As a general remark, observe that constraining an element of $B_t$ to be any constant other than zero is infeasible because all elements in the RHS of (\ref{eq:bt}) are either zero or time varying due to the time-varying mixing weights.%Also, note that the results of the above propositions apply as well for the SVAR model with two volatility regimes discussed in \cite{Lanne+Lutkepohl:2010}.
-\footnote{We have focused on the B-model where the structure is imposed on the contemporaneous relations of the shocks. Alternatively, one may consider the "A-model" setup in which the structure is placed on the contemporaneous relations of the observable variables that are governed by the "A-matrix" \citep[see, e.g.,][Section 9.1.1]{Lutkepohl:2005}. The A-model is obtained implicitly from the B-model (\ref{eq:sgmvar}) and (\ref{eq:sgmvarerr}) by defining the A-matrix as $A_t\equiv B_t^{-1}$ where $B_t$ is given by (\ref{eq:bt}). In practice, however, one needs to carefully derive how any specific constraint on $A_t$ can be imposed by restricting $W$.
+The conditions of Proposition 2 are not in general necessary. If $d=2$ and $\lambda_{m1}=\lambda_{m2}$ for all $m$, for instance, identification (of all shocks) with Cholesky decomposition leads to unique solution with less restrictive constraints than the ones required in Proposition 2. More generally, if all the eigenvalues are the same for all covariance matrices, then $\Omega_m=\lambda_{m1}\Omega_1$ and the necessary identification condition is the same as for the conventional SVAR model. If more than two eigenvalues are identical for all $m=2,...,M$ but they are not all identical, it may still be possible to find less restrictive (or more suitable) conditions for identification of the shocks. Specifically, the idea utilized in the proof of Proposition 2 (presented in an Appendix in Virolainen (2020)) generalizes to larger numbers of identical eigenvalues, but the sufficient conditions become increasingly more complicated and are not presented for brevity. As a general remark, observe that constraining an element of $B_t$ to be any constant other than zero is infeasible because all elements in the B-matrix are either zero or time varying due to the time-varying mixing weights.
 
 ## Estimation of the structural GMVAR model
 The SGMVAR model is estimated similarly to the reduced form version, expect that the model is parametrized with $W$ and $\lambda_{mi}$, $m=2,...,M$, $i=1,...,d$ instead of the covariance matrices $\Omega_{m}$, $m=1,...,M$. The estimation is can be done with the function `fitGMVAR` but now the argument `structural_pars` needs to be supplied with a list providing the constraints on $W$ (which equally imposes the constraints on the B-matrix) and optionally linear constraints on the $\lambda_{mi}$ parameters. 
 
 The list `structural_pars` should contain at least the element `W` which is a $(dxd)$ matrix matrix with its entries imposing constraints on W: NA indicating that the element is unconstrained, a positive value indicating strict positive sign constraint, a negative value indicating strict negative sign constraint, and zero indicating that the element is constrained to zero. The optional element named `C_lambda` which is a $(d(M-1) \times r)$ constraint matrix that satisfies ($\lambda_{2},...,\lambda_{M}) =C_{\lambda} \gamma$ where $\lambda_{m}=(\lambda_{m1},...,\lambda_{md})$ and $\gamma$ is the new $(r x 1)$ parameter subject to which the model is estimated (similarly to AR parameter constraints). The entries of `C_lambda` must be either __positive__ or __zero__. Ignore (or set to `NULL`) if the eigenvalues $\lambda_{mi}$ should not be constrained. Note that other constraints than constraining some of the $\lambda_{mi}$ to be identical are not recommended but is such constraints are imposed, the argument `lambda_scale` in the genetic algorithm (see `?GAfit`) should be adjusted accordingly.
+
+## Building structural model based on a reduced form model
+If the number of regimes is two ($M=2$), a structural model can be build based on a reduced form model because the matrix decomposition used in the simulatenous diagonalization of the error term covariance matrices always exists. This can be done with function `gmvar_to_sgmvar` which should be supplied with the reduced form model and it returns a corresponding structural model. After creating the structural model, the columns of $W$ can be reordered ex-post with the function `reorder_W_columns` which also reorders all $\lambda_{mi}$ accordingly and hence the resulting model will conincide with the original reduced form model. Also, all signs any column of $W$ can be swapped ex-post with the function `swap_W_signs`.
 
 ## Impulse response analysis
 Following Koop et al. (1996) and Kilian & Lütkepohl (2017), we consider the generalized impulse response function (GIRF) defined as
@@ -342,6 +343,8 @@ Because the SGMVAR model allows to associate specific features or economic inter
 In `gmvarkit`, the GIRF can be estimated with the function `GIRF` which should be supplied with the estimated SGMVAR model or a SGMVAR model build with hand specified parameter values using the function `GMVAR`. The size of the structural shock can be set with the argument `shock_size`. If not specified, the size of one standard deviation is used; that is, the size one. Among other arguments, the function may also be supplied with the argument `init_regimes` which specifies from which regimes' stationary distributions the initial values are generated from. If more than one regime is specified, a mixture distribution with weights given by the mixing weight parameters is used. Alternatively, one may specify fixed initial values with the argument `init_values`. Note that the confidence intervals (whose confidence level can be specified with the argument `ci`) reflect uncertainty about the initial value only and not about the parameter estimates. 
 
 Because estimating the GIRF and confidence intervals for it is computationally demanding, parallel computing is taken use of to shorten the estimation time. The number of CPU cores used can be set with the argument `ncores`. Finally, observe that the objects returned by the GIRF function have their own plot and print methods.
+
+
 
 ## References
 * Lanne, M. and Lütkepohl, H. (2010). Structural vector autoregressions with nonnormal residuals. _Journal of Business & Economic Statistics_, 28(1):159–168.
